<resources>
    <string name="app_name">IntentsProj</string>
    <string name="my">My Application</string>
    <string name="num1">Number1</string>
    <string name="line">............................................</string>
    <string name="num2">Number2</string>
    <string name="ok">Ok</string>
    <string name="add">+</string>
    <string name="redu">-</string>
    <string name="multi">*</string>
    <string name="divi">/</string>
</resources>